[veSync] Mist ID Corrections Updated DCO 2
[veSync] Mist ID Corrections Updated DCO 2

Signed-off-by: David Goodyear <david.goodyear@gmail.com>